# rust-foc

./: .gitignore  Cargo.toml  README.md  app-layout.x  app-memory.x  build.rs  memory-slot-a.x  memory-slot-b.x  memory.x
.cargo/: config.toml
.omo/run-continuation/: ses_0bb237f2bffeDA5HBwgY7ocAQ0.json  ses_0bb239f2bffelss3fyW7FEjPQu.json  ses_0bb2417ecffedriNFT6veWN3nC.json  ses_0bf410511ffeCrqeeQYXXWBmMp.json  ses_0bf52db48ffezBP9u2awLD9jRM.json  ses_0bf5497acffe6kwwvwMD3TQdOx.json  ses_0bf55873bffeAbReJErn2iAdlf.json  ses_0bf5acc90ffe4BO79uQvM7X1F3.json  ses_0bf5cb011ffeAc6h7mdW01LfxI.json  ses_0bf5cb01dffeNnhO2Rcomxv4Hx.json  ses_0bf5cb13fffeZsX7a4pijogXi7.json  ses_0bf5cb1b7ffeoNbVJBOAAwoKHC.json  ses_0bf6e14cbffegKlWF4Q5DD54U5.json  ses_0bf6e1566ffeU6q0P7nPMjlobe.json  ses_0bf8ca693ffeYqAXT9FV1hw3CY.json  ses_0bf8ca765ffeHKO8Xr7JFv5u1l.json  ses_0bf8ca7e3ffeGP76ekxgDpJLvl.json  ses_0bf8ca833ffeZ3tOOzH41hTJk1.json  ses_0bf8e5b76ffecdELOYk6QWLSsy.json
bootloader/: Cargo.toml  build.rs  link-bl.x  memory.x
bootloader/src/: crc.rs  flash.rs  main.rs  uart.rs  ymodem.rs
common/: Cargo.toml
common/src/: addresses.rs  flag.rs  flash.rs  lib.rs
docs/superpowers/plans/: 2026-06-25-b-g431b-esc1-init.md  2026-06-25-shell-and-ota.md  2026-07-17-safety-first-audit-remediation.md
docs/superpowers/specs/: 2026-06-25-b-g431b-esc1-initialization-design.md  2026-06-25-flash-budget-128kb.md  2026-06-25-shell-and-ota-design.md  2026-07-01-openloop-pwm-design.md  2026-07-02-can-ota-uds-design.md  2026-07-02-console-transport-design.md  2026-07-03-uds-rewrite-design.md
foc-algo/: Cargo.toml
foc-algo/src/: cascade.rs  current_loop.rs  current_loop_controller.rs  feedforward.rs  field_weakening.rs  filter.rs  lib.rs  motor.rs  observer.rs  pid.rs  position_loop_controller.rs  protection.rs  ramp.rs  speed_loop_controller.rs  startup.rs  state.rs  svpwm.rs  transforms.rs
foc-algo/src/loops/: current.rs  feedforward.rs  mod.rs  position.rs  speed.rs
foc-algo/src/math/: circle_limitation.rs  decoupling.rs  filter.rs  mod.rs  pid.rs  ramp.rs  svpwm.rs  transforms.rs
scripts/: build_all.sh  firmware_emulator.py  flash_and_ota.sh  flash_and_run.sh  setup_vcan.sh  smoke_test.py
shared/: Cargo.toml
shared/src/: lib.rs
src/: bsp.rs  key_store.rs  main.rs  main.rs.new  metadata.rs  ota.rs  wdog.rs
src/can/: canopen.rs  mod.rs  od.rs  ota.rs  sdo.rs  uds.rs  uds_config.rs
src/can/uds/: comm_control.rs  config.rs  download.rs  dtc.rs  mod.rs  pending.rs  security.rs  session.rs  state.rs  tester_present.rs
src/can/uds_transport/: frame.rs  mod.rs
src/commands/: mod.rs  ota.rs  shell.rs
src/control/: mod.rs  open_loop.rs
src/drivers/: debug_uart.rs  flash.rs  mod.rs  motor_pwm.rs
src/drivers/can/: canopen.rs  mod.rs  uds_bridge.rs
src/hal/: flash.rs  mod.rs
src/motor/: cmd.rs  open_loop.rs
src/ota/: flash.rs  mod.rs
src/shell/: commands.rs  mod.rs  task.rs
src/tasks/: heartbeat.rs  mod.rs  motor.rs  shell.rs
src/uds/: comm_control.rs  config.rs  crypto.rs  download.rs  dtc.rs  mod.rs  nrc.rs  pending.rs  read_data.rs  reset.rs  routine.rs  security.rs  state.rs  static_config.rs  static_config.rs.new  table.rs  transport.rs  types.rs  uds_config.rs  write_data.rs
src/uds/transport/: can_id.rs  frame.rs  mod.rs
uds-core/: Cargo.toml
uds-core/src/: crypto.rs  dtc.rs  lib.rs  pending.rs  state.rs  table.rs  types.rs
