[workspace]
members = ["common", "foc-algo", "uds-core"]
resolver = "2"

[package]
name = "foc-rust"
version = "0.1.0"
edition = "2021"
authors = ["heng"]
description = "Field Oriented Control firmware in Rust on B-G431B-ESC1"

[dependencies]
foc-common = { path = "common" }
foc-algo = { path = "foc-algo" }
uds-core = { path = "uds-core" }
embassy-stm32 = { version = "0.6", features = ["stm32g431cb", "defmt", "time-driver-any", "unstable-pac", "memory-x"] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt"] }

# 1 MHz tick rate so `Duration::from_micros(100)` is exactly
# 100 ticks (no rounding to 3 ticks ≈ 91.5 µs as we'd get at
# 32 768 Hz). The motor task's 10 kHz cadence stays exactly
# 10 kHz instead of drifting to 10.93 kHz.
embassy-time = { version = "0.5", features = ["defmt", "tick-hz-1_000_000"] }
embassy-futures = "0.1"
embassy-sync = "0.8"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-io-06 = { package = "embedded-io", version = "0.6" }
# `embedded_can` is the type-level surface (Id::Standard / Id::Extended
# enum) used by the embassy CAN frame API. We pin to 0.4.1 to match
# the version embassy-stm32 0.6 brings in transitively; using a
# different version here causes "multiple different versions" errors
# when matching on `frame.header().id()`.
embedded-can = "0.4.1"

defmt = "1"
defmt-rtt = "1"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
# `critical-section` is the trait crate; the single-core impl
# is provided by `cortex-m`'s `critical-section-single-core`
# feature above (the two features share the same name, but
# they're on different crates and have different semantics).
critical-section = "1.1"
cortex-m-rt = "0.7"
panic-probe = { version = "1", features = ["print-defmt"] }

# Shell uses embedded-cli's Command derive; CLI 0.2.1 depends on
# embedded-io v0.6, hence the dual v0.6/v0.7 deps above.
embedded-cli = { version = "0.2.1" }

# AES-128 for UDS SecurityAccess seed-key derivation.
aes = "0.8"

[profile.release]
debug = 2
opt-level = "s"
# LTO is disabled: the OTA path uses `#[link_section = ".data"]`
# to put the dispatch chain in RAM, and LTO would inline those
# functions into their `.text` callers regardless of the section
# annotation, breaking the safety property. Without LTO the
# binary is ~6x larger (12 KB → 80 KB .text) but still fits in
# the 124 KB app region with headroom. The split between .text
# and .data matches what we asked the linker for.
lto = false
codegen-units = 1
strip = true

[profile.dev]
debug = 2
opt-level = "s"

# Host-side test harness for UDS unit tests is deferred to a
# follow-up commit. Setting up a separate `x86_64-unknown-linux-gnu`
# target requires `rustup target add` and an external toolchain
# — out of scope for the firmware. For now, the LFSR algorithm
# is covered by the Python smoke test
# `scripts/smoke_test.py::s_uds_lfsr_key_known`, which computes
# the same key the firmware should produce and asserts equality
# against a known reference vector (0x497DFE82).
