[workspace]
members = ["common", "foc-algo", "uds-core", "shared", "bootloader"]
resolver = "2"

[package]
name = "foc-rust"
version = "0.1.0"
edition = "2021"
authors = ["heng"]
description = "FOC firmware — dual-slot, bootloader + app"

[dependencies]
foc-shared = { path = "shared" }
foc-common = { path = "common" }
foc-algo = { path = "foc-algo" }
uds-core = { path = "uds-core", default-features = false }
embassy-stm32 = { version = "0.6", features = ["stm32g431cb", "defmt", "time-driver-any", "unstable-pac"] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "tick-hz-1_000_000"] }
embassy-futures = "0.1"
embassy-sync = "0.8"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-can = "0.4.1"
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
critical-section = "1.1"
cortex-m-rt = "0.7"
aes = "0.8"

[profile.release]
debug = 0
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = 2
opt-level = "s"
