[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"
authors = ["heng"]
description = "y-modem bootloader for B-G431B-ESC1"
publish = false

[[bin]]
name = "bootloader"
path = "src/main.rs"

[dependencies]
# `memory-x` feature is required to give cortex-m-rt a MEMORY block
# to lay out sections.  Our own `memory.x` (copied next to cortex-m-rt's
# link.x by `build.rs`) overrides the embassy default and adds the
# OTA-flag link-time ASSERT.
embassy-stm32 = { version = "0.6", features = ["stm32g431cb", "time-driver-any", "unstable-pac", "memory-x"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-io = "0.7"
embedded-storage = "0.3"
foc-common = { path = "../common" }
